--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SmartRecipes</string>
+    <string name="button_save_description">Add Recipe</string>
+    <string name="add_recipe_button_description">Add Recipe</string>
+    <string name="delete_recipe_button_description">Delete Recipe</string>
 </resources>
